// TZW Fire Extinguisher Management System
// Paste this file into https://dbdiagram.io/d

Project tzw_fire_extinguisher_management {
  database_type: 'PostgreSQL'
  Note: 'Database model for TZW LTD Fire Extinguisher Management System (Prisma schema)'
}

// =====================
// ENUMS
// =====================

Enum Role {
  ADMIN
  INSPECTOR
  USER
}

Enum ExtinguisherStatus {
  ACTIVE
  EXPIRED
  OUT_OF_SERVICE
  UNDER_MAINTENANCE
}

Enum ExtinguisherType {
  WATER
  FOAM
  CO2
  DRY_POWDER
  WET_CHEMICAL
}

Enum InspectionStatus {
  SCHEDULED
  COMPLETED
  OVERDUE
  CANCELLED
}

// =====================
// AUTH & USERS
// =====================

Table User {
  id varchar [pk, note: 'UUID primary key']
  email varchar [unique, not null, note: 'Login email address']
  passwordHash varchar [not null, note: 'Bcrypt password hash']
  firstName varchar [not null]
  lastName varchar [not null]
  role Role [not null, default: 'USER', note: 'ADMIN | INSPECTOR | USER']
  isActive boolean [not null, default: true, note: 'Account enabled/disabled']
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]

  indexes {
    role
  }

  Note: 'Application users and role-based access control'
}

Table Session {
  id varchar [pk, note: 'UUID primary key']
  tokenId varchar [unique, not null, note: 'JWT session identifier (jti)']
  expiresAt timestamp [not null]
  revokedAt timestamp [note: 'Set when user logs out']
  createdAt timestamp [not null, default: `now()`]
  userId varchar [not null, ref: > User.id]

  indexes {
    (userId, expiresAt)
  }

  Note: 'Active and revoked login sessions for JWT auth'
}

Table PasswordResetToken {
  id varchar [pk, note: 'UUID primary key']
  tokenHash varchar [unique, not null, note: 'SHA-256 hash of reset token']
  expiresAt timestamp [not null]
  usedAt timestamp [note: 'Set after successful password reset']
  createdAt timestamp [not null, default: `now()`]
  userId varchar [not null, ref: > User.id]

  indexes {
    (userId, expiresAt)
  }

  Note: 'Forgot-password / recover-password tokens'
}

// =====================
// CORE DOMAIN
// =====================

Table FireExtinguisher {
  id varchar [pk, note: 'UUID primary key']
  serialNumber varchar [unique, not null]
  location varchar [not null, note: 'Physical placement in the building']
  type ExtinguisherType [not null]
  size varchar [not null, note: '2.5 lbs. | 5 lbs. | 9 lbs. | 12 lbs.']
  installationDate timestamp [not null]
  expiryDate timestamp [not null]
  status ExtinguisherStatus [not null, default: 'ACTIVE']
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
  registeredById varchar [not null, ref: > User.id, note: 'Admin who registered the unit']

  indexes {
    status
    expiryDate
  }

  Note: 'Fire extinguisher inventory records'
}

Table Inspection {
  id varchar [pk, note: 'UUID primary key']
  inspectionDate timestamp [not null]
  inspectionTime varchar [not null, note: 'HH:mm format']
  status InspectionStatus [not null, default: 'SCHEDULED']
  result varchar [note: 'Required when status is COMPLETED']
  notes varchar
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
  extinguisherId varchar [not null, ref: > FireExtinguisher.id]
  scheduledById varchar [not null, ref: > User.id, note: 'User who scheduled the inspection']

  indexes {
    (status, inspectionDate)
    extinguisherId
  }

  Note: 'Scheduled and completed extinguisher inspections'
}

Table MaintenanceRecord {
  id varchar [pk, note: 'UUID primary key']
  actionTaken varchar [not null]
  issuesIdentified varchar
  recommendations varchar
  notes varchar
  maintenanceDate timestamp [not null]
  createdAt timestamp [not null, default: `now()`]
  extinguisherId varchar [not null, ref: > FireExtinguisher.id]
  recordedById varchar [not null, ref: > User.id, note: 'Inspector or admin who logged maintenance']

  indexes {
    (extinguisherId, maintenanceDate)
  }

  Note: 'Maintenance and repair history for extinguishers'
}

// =====================
// SUPPORTING TABLES
// =====================

Table Notification {
  id varchar [pk, note: 'UUID primary key']
  title varchar [not null]
  message varchar [not null]
  readAt timestamp [note: 'Null until the user reads the notification']
  createdAt timestamp [not null, default: `now()`]
  userId varchar [not null, ref: > User.id]

  indexes {
    (userId, readAt)
  }

  Note: 'In-app notifications per user'
}

Table AuditLog {
  id varchar [pk, note: 'UUID primary key']
  action varchar [not null, note: 'Action performed, e.g. CREATE, UPDATE, DELETE']
  entityType varchar [not null, note: 'Affected entity name']
  entityId varchar [note: 'Affected record id']
  metadata jsonb [note: 'Extra context stored as JSON']
  createdAt timestamp [not null, default: `now()`]
  userId varchar [ref: > User.id, note: 'Actor; nullable for system events']

  indexes {
    (entityType, entityId)
    (userId, createdAt)
  }

  Note: 'Audit trail for important system actions'
}

// =====================
// RELATIONSHIP NOTES
// =====================
// User 1--* Session
// User 1--* PasswordResetToken
// User 1--* FireExtinguisher (registeredBy)
// User 1--* Inspection (scheduledBy)
// User 1--* MaintenanceRecord (recordedBy)
// User 1--* Notification
// User 0..1--* AuditLog
// FireExtinguisher 1--* Inspection
// FireExtinguisher 1--* MaintenanceRecord
